--- a/app/src/main/res/layout/activity_carinfo.xml
+++ b/app/src/main/res/layout/activity_carinfo.xml
@@ -4,26 +4,28 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
+
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/imageCar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:srcCompat="@drawable/ic_img2" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/tv_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="TextView" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/tv_Marque"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="TextView" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/tv_conso"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="TextView" />
