--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -8,7 +8,13 @@
     android:orientation="vertical"
     >
 
+    <TextView
+        android:text="Choisissez les voitures a comparer"
 
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+
+        android:textSize="15dp"></TextView>
 
 
     <Spinner
@@ -17,7 +23,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:textAlignment="center"
-        android:textSize="20sp"
+        android:textSize="10dp"
 
         android:id="@+id/spinner1"
 
@@ -34,7 +40,7 @@
 
 
         android:textAlignment="center"
-        android:textSize="20sp"
+        android:textSize="10dp"
 
         android:id="@+id/spinner2"
 
