--- a/app/src/main/res/layout/activity_add_car.xml
+++ b/app/src/main/res/layout/activity_add_car.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView android:layout_height="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent">
-
-
-
-
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical" android:layout_width="match_parent"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -19,230 +19,220 @@
             android:orientation="vertical" />
 
 
-    <ImageView
-        android:id="@+id/imageCar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/ic_img2"
-        android:layout_gravity="top|center_horizontal"
-        />
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_gravity="center_horizontal"
-        >
-
-        <TextView
-            android:id="@+id/label_name"
+        <ImageView
+            android:id="@+id/imageCar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Nom :"
-            android:layout_marginRight="20dp"
-            android:textStyle="bold"/>
+            android:layout_gravity="top|center_horizontal"
+            app:srcCompat="@drawable/ic_img2" />
 
-        <EditText
-            android:id="@+id/et_nom"
-            android:layout_width="match_parent"
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:text="" />
+            android:layout_gravity="center_horizontal"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/label_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="@dimen/tv_label_margin_right"
+                android:text="@string/tv_add_label_name"
+                android:textStyle="bold" />
+
+            <EditText
+                android:id="@+id/et_nom"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:inputType="textPersonName"
+                />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/label_origine"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="@dimen/tv_label_margin_right"
+                android:text="@string/tv_add_label_origine"
+                android:textStyle="bold" />
+
+            <EditText
+                android:id="@+id/et_origine"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:inputType="textPersonName"
+                android:text="" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/label_year"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="@dimen/tv_label_margin_right"
+                android:text="@string/tv_add_label_annee"
+                android:textStyle="bold" />
+
+            <EditText
+                android:id="@+id/et_annee"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:inputType="textPersonName"
+                android:text="" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/label_conso"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="@dimen/tv_label_margin_right"
+                android:text="@string/tv_add_label_conso"
+                android:textStyle="bold" />
+
+            <EditText
+                android:id="@+id/et_conso"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:inputType="textPersonName"
+                android:text="" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/label_vitmax"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="@dimen/tv_label_margin_right"
+                android:text="@string/tv_add_label_vitmax"
+                android:textStyle="bold" />
+
+            <EditText
+                android:id="@+id/et_vitmax"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:inputType="textPersonName"
+                android:text="" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/label_cv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="@dimen/tv_label_margin_right"
+                android:text="@string/tv_add_label_cv"
+                android:textStyle="bold" />
+
+            <EditText
+                android:id="@+id/et_cv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:inputType="textPersonName"
+                android:text="" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/label_poid"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="@dimen/tv_label_margin_right"
+                android:text="@string/tv_add_label_poind"
+                android:textStyle="bold" />
+
+            <EditText
+                android:id="@+id/et_poid"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:inputType="textPersonName"
+                android:text="" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/label_zeroAcent"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="@dimen/tv_label_margin_right"
+                android:text="@string/tv_add_label_zeroaCent"
+                android:textStyle="bold" />
+
+            <EditText
+                android:id="@+id/et_zeroAcent"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:inputType="textPersonName"
+                android:text="" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/btn_ajouter"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/btn_add_button" />
+
+        </LinearLayout>
+
 
     </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_gravity="center_horizontal"
-        >
-
-        <TextView
-            android:id="@+id/label_origine"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Origine :"
-            android:layout_marginRight="20dp"
-            android:textStyle="bold"/>
-
-        <EditText
-            android:id="@+id/et_origine"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:text="" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_gravity="center_horizontal"
-        >
-
-        <TextView
-            android:id="@+id/label_year"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Annee :"
-            android:layout_marginRight="20dp"
-            android:textStyle="bold"/>
-
-        <EditText
-            android:id="@+id/et_annee"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:text="" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_gravity="center_horizontal"
-        >
-
-        <TextView
-            android:id="@+id/label_conso"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Consomation :"
-            android:layout_marginRight="20dp"
-            android:textStyle="bold"/>
-
-        <EditText
-            android:id="@+id/et_conso"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:text="" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_gravity="center_horizontal"
-        >
-
-        <TextView
-            android:id="@+id/label_vitmax"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Vitesse maximum :"
-            android:layout_marginRight="20dp"
-            android:textStyle="bold"/>
-
-        <EditText
-            android:id="@+id/et_vitmax"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:text="" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_gravity="center_horizontal"
-       >
-
-        <TextView
-            android:id="@+id/label_cv"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Cheveaux :"
-            android:layout_marginRight="20dp"
-            android:textStyle="bold"/>
-
-        <EditText
-            android:id="@+id/et_cv"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:text="" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_gravity="center_horizontal"
-        >
-
-        <TextView
-            android:id="@+id/label_poid"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Poids :"
-            android:layout_marginRight="20dp"
-            android:textStyle="bold"/>
-
-        <EditText
-            android:id="@+id/et_poid"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:text="" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_gravity="center_horizontal"
-        >
-
-        <TextView
-            android:id="@+id/label_zeroAcent"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="ZeroAcent :"
-            android:layout_marginRight="20dp"
-            android:textStyle="bold"/>
-
-        <EditText
-            android:id="@+id/et_zeroAcent"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:text="" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/btn_ajouter"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Ajouter"
- />
-
-    </LinearLayout>
-
-
-</LinearLayout>
 
 </ScrollView>
