--- a/app/src/main/res/layout/activity_carinfo.xml
+++ b/app/src/main/res/layout/activity_carinfo.xml
@@ -1,231 +1,230 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<ScrollView android:layout_height="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent">
-
-
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical" android:layout_width="match_parent"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/imageCar"
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/ic_img2"
-        android:layout_gravity="top|center_horizontal"
-        />
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="15dp">
-
-        <TextView
-            android:id="@+id/label_name"
+        <ImageView
+            android:id="@+id/imageCar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Nom :"
-            android:layout_marginRight="20dp"
-            android:textStyle="bold"/>
+            android:layout_gravity="top|center_horizontal"
+            app:srcCompat="@drawable/ic_img2" />
 
-        <TextView
-            android:id="@+id/tv_name"
-            android:layout_width="match_parent"
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="@dimen/ll_margin_bottom"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/label_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="@dimen/tv_label_margin_right"
+                android:text="@string/tv_add_label_name"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/tv_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="@dimen/ll_margin_bottom"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/label_origine"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="@dimen/tv_label_margin_right"
+                android:text="@string/tv_add_label_origine"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/tv_origine"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="@dimen/ll_margin_bottom"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/label_year"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="@dimen/tv_label_margin_right"
+                android:text="@string/tv_add_label_annee"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/tv_year"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="@dimen/ll_margin_bottom"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/label_conso"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="@dimen/tv_label_margin_right"
+                android:text="@string/tv_add_label_conso"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/tv_conso"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="TextView" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="@dimen/ll_margin_bottom"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/label_vitmax"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="@dimen/tv_label_margin_right"
+                android:text="@string/tv_add_label_vitmax"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/tv_vitmax"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="@dimen/ll_margin_bottom"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/label_cv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="@dimen/tv_label_margin_right"
+                android:text="@string/tv_add_label_cv"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/tv_cv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="@dimen/ll_margin_bottom"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/label_poid"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="@dimen/tv_label_margin_right"
+                android:text="@string/tv_add_label_poind"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/tv_poid"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="@dimen/ll_margin_bottom"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/label_zeroAcent"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="@dimen/ll_margin_bottom"
+                android:text="@string/tv_add_label_zeroaCent"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/tv_zeroAcent"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/btn_last"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:drawableLeft="@drawable/ic_arrow_back_last"
+                android:text="@string/btn_last" />
+
+            <Button
+                android:id="@+id/btn_next"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:drawableRight="@drawable/ic_arrow_forward"
+                android:text="@string/btn_next" />
+
+        </LinearLayout>
+
 
     </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="15dp">
-
-        <TextView
-            android:id="@+id/label_origine"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Origine :"
-            android:layout_marginRight="20dp"
-            android:textStyle="bold"/>
-
-        <TextView
-            android:id="@+id/tv_origine"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="TextView" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="15dp">
-
-        <TextView
-            android:id="@+id/label_year"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Annee :"
-            android:layout_marginRight="20dp"
-            android:textStyle="bold"/>
-
-        <TextView
-            android:id="@+id/tv_year"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="TextView" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="15dp">
-
-        <TextView
-            android:id="@+id/label_conso"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Consomation :"
-            android:layout_marginRight="20dp"
-            android:textStyle="bold"/>
-
-        <TextView
-            android:id="@+id/tv_conso"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="TextView" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="15dp">
-
-        <TextView
-            android:id="@+id/label_vitmax"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Vitesse maximum :"
-            android:layout_marginRight="20dp"
-            android:textStyle="bold"/>
-
-        <TextView
-            android:id="@+id/tv_vitmax"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="TextView" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="15dp">
-
-        <TextView
-            android:id="@+id/label_cv"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Cheveaux :"
-            android:layout_marginRight="20dp"
-            android:textStyle="bold"/>
-
-        <TextView
-            android:id="@+id/tv_cv"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="TextView" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="15dp">
-
-        <TextView
-            android:id="@+id/label_poid"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Poids :"
-            android:layout_marginRight="20dp"
-            android:textStyle="bold"/>
-
-        <TextView
-            android:id="@+id/tv_poid"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="TextView" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="15dp">
-
-        <TextView
-            android:id="@+id/label_zeroAcent"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="ZeroAcent :"
-            android:layout_marginRight="20dp"
-            android:textStyle="bold"/>
-
-        <TextView
-            android:id="@+id/tv_zeroAcent"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="TextView" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/btn_last"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="last"
-            android:drawableLeft="@drawable/ic_arrow_back_last"/>
-
-        <Button
-            android:id="@+id/btn_next"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Next"
-            android:drawableRight="@drawable/ic_arrow_forward"/>
-
-    </LinearLayout>
-
-
-
-
-</LinearLayout>
 
 </ScrollView>
