--- a/app/src/main/res/layout/activity_circle.xml
+++ b/app/src/main/res/layout/activity_circle.xml
@@ -8,8 +8,7 @@
     android:layout_height="match_parent"
     tools:context=".activity.MainActivity">
 
-    <com.example.projetkotlindam2019.classes.CustomView
-        xmlns:android="http://schemas.android.com/apk/res/android"
+    <com.example.projetkotlindam2019.classes.CustomView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/customView"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
