--- a/app/src/main/res/layout/activity_main_page.xml
+++ b/app/src/main/res/layout/activity_main_page.xml
@@ -20,8 +20,7 @@
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header_main_page"
-        app:menu="@menu/activity_main_page_drawer"
-        />
+        app:menu="@menu/activity_main_page_drawer" />
 
 
 </androidx.drawerlayout.widget.DrawerLayout>
