--- a/app/src/main/res/layout/activity_mercedescard.xml
+++ b/app/src/main/res/layout/activity_mercedescard.xml
@@ -1,49 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/card_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:id="@+id/card_view"
-    android:layout_margin="5dp"
-    card_view:cardBackgroundColor="#81C784"
-    card_view:cardCornerRadius="12dp"
-    card_view:cardElevation="3dp"
-    card_view:contentPadding="4dp" >
-
+    android:layout_margin="@dimen/cv_margin"
+    card_view:cardBackgroundColor="@color/cardColor"
+    card_view:cardCornerRadius="@dimen/cv_corner_radius"
+    card_view:cardElevation="@dimen/cv_card_elevation"
+    card_view:contentPadding="@dimen/cv_content_padding">
 
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="16dp" >
+        android:padding="@dimen/rl_padding">
 
         <ImageView
-            android:layout_width="100dp"
-            android:layout_height="100dp"
             android:id="@+id/item_image"
+            android:layout_width="@dimen/iv_width_card"
+            android:layout_height="@dimen/iv_height_card"
             android:layout_alignParentStart="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
-            android:layout_marginEnd="16dp"
-            android:layout_marginRight="16dp" />
+            android:layout_marginEnd="@dimen/iv_margin_end"
+            android:layout_marginRight="@dimen/iv_margin_right" />
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:id="@+id/item_title"
-            android:layout_toEndOf="@+id/item_image"
-            android:layout_toRightOf="@+id/item_image"
-            android:layout_alignParentTop="true"
-            android:textSize="30sp" />
-
-        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/item_detail"
+            android:layout_alignParentTop="true"
             android:layout_toEndOf="@+id/item_image"
             android:layout_toRightOf="@+id/item_image"
-            android:layout_below="@+id/item_title" />
+            android:textSize="@dimen/tv_text_size" />
+
+        <TextView
+            android:id="@+id/item_detail"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/item_title"
+            android:layout_toEndOf="@+id/item_image"
+            android:layout_toRightOf="@+id/item_image" />
 
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
