--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,34 @@
     <dimen name="nav_header_vertical_spacing">8dp</dimen>
     <dimen name="nav_header_height">176dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="tv_label_margin_right">20dp</dimen>
+    <dimen name="ll_margin_bottom">15dp</dimen>
+
+    <dimen name="ll_padding">16dp</dimen>
+    <dimen name="iv_height">150dp</dimen>
+    <dimen name="iv_width">150dp</dimen>
+
+    <dimen name="cv_margin">5dp</dimen>
+    <dimen name="cv_corner_radius">12dp</dimen>
+    <dimen name="cv_card_elevation">3dp</dimen>
+    <dimen name="cv_content_padding">4dp</dimen>
+    <dimen name="rl_padding">16dp</dimen>
+    <dimen name="iv_height_card">100dp</dimen>
+    <dimen name="iv_width_card">100dp</dimen>
+    <dimen name="iv_margin_end">16dp</dimen>
+    <dimen name="iv_margin_right">16dp</dimen>
+    <dimen name="tv_text_size">30sp</dimen>
+
+    <dimen name="fr_text_size">15dp</dimen>
+
+    <dimen name="margin_spinner">8dp</dimen>
+    <dimen name="tv_size_spinner">10dp</dimen>
+
+    <dimen name="header_height">176dp</dimen>
+    <dimen name="padding">16dp</dimen>
+
+
+
 </resources>
+
+
